--- a/app/src/main/res/layout/activity_playing.xml
+++ b/app/src/main/res/layout/activity_playing.xml
@@ -8,20 +8,18 @@
     android:layout_margin="12dp"
     tools:context=".ui.activity.Playing">
 
+    <TextView
+        android:id="@+id/txtTimer"
+        android:text="60"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:progress="0"
-            android:max="2"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <RelativeLayout
             android:layout_margin="3dp"
