--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="green">#f816a463</color>
     <color name="grey">#83838c</color>
     <color name="abu">#c0c0c0</color>
     <color name="putih">#00000000</color>
+
+    <color name="starBlue">#09c6df</color>
+    <color name="endBlue">#0bcce6</color>
+    <color name="blue">#4A64BE</color>
 
 </resources>
